{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 85,
  "lineage": "63827334-fa82-8469-0f82-bb20c70526a9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "python_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/regions/us-central1/networkEndpointGroups/python-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-08T08:43:38.301-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "_PdzdY_FWnA=",
            "generated_id": 7496497923656525765,
            "id": "projects/thermal-camera-485502-u2/global/backendServices/python-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "python-backend",
            "port_name": "http",
            "project": "thermal-camera-485502-u2",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/backendServices/python-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_cloud_run_v2_service.python",
            "google_compute_region_network_endpoint_group.python_neg",
            "google_sql_database.mydb",
            "google_sql_database_instance.main",
            "google_sql_user.db_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "react_manab",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/regions/us-central1/networkEndpointGroups/react-manab-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-08T08:50:28.661-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "wkjX4rvUGxM=",
            "generated_id": 304955797916361771,
            "id": "projects/thermal-camera-485502-u2/global/backendServices/react-manab",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "react-manab",
            "port_name": "http",
            "project": "thermal-camera-485502-u2",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/backendServices/react-manab",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_cloud_run_v2_service.react",
            "google_compute_region_network_endpoint_group.react_manab_neg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.117.15.182",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-03-07T12:10:46.119-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/thermal-camera-485502-u2/global/addresses/python-cloudrun-lb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "python-cloudrun-lb-ip",
            "prefix_length": 0,
            "project": "thermal-camera-485502-u2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/addresses/python-cloudrun-lb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 1993379683323949316,
            "id": "projects/thermal-camera-485502-u2/global/forwardingRules/manab-http-redirect-rule",
            "ip_address": "34.117.15.182",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "manab-http-redirect-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "thermal-camera-485502-u2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/forwardingRules/manab-http-redirect-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/targetHttpProxies/manab-http-redirect-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_global_address.lb_ip",
            "google_compute_target_http_proxy.http_redirect",
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 524542065418184180,
            "id": "projects/thermal-camera-485502-u2/global/forwardingRules/manab-cloudrun-https-forwarding-rule",
            "ip_address": "34.117.15.182",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "manab-cloudrun-https-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "thermal-camera-485502-u2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/forwardingRules/manab-cloudrun-https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/targetHttpsProxies/manab-cloudrun-https-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_cloud_run_v2_service.python",
            "google_cloud_run_v2_service.react",
            "google_compute_backend_service.python_backend",
            "google_compute_backend_service.react_manab",
            "google_compute_global_address.lb_ip",
            "google_compute_managed_ssl_certificate.app_cert",
            "google_compute_region_network_endpoint_group.python_neg",
            "google_compute_region_network_endpoint_group.react_manab_neg",
            "google_compute_target_https_proxy.https",
            "google_compute_url_map.main",
            "google_sql_database.mydb",
            "google_sql_database_instance.main",
            "google_sql_user.db_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-07T12:51:44.125-08:00",
            "fingerprint": "YnFxyhAerSs=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/thermal-camera-485502-u2/global/targetHttpProxies/manab-http-redirect-proxy",
            "name": "manab-http-redirect-proxy",
            "project": "thermal-camera-485502-u2",
            "proxy_bind": false,
            "proxy_id": 3287588689798050096,
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/targetHttpProxies/manab-http-redirect-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/urlMaps/manab-http-to-https-redirect"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-08T08:51:43.407-07:00",
            "fingerprint": "D0ZhSStuT6k=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/thermal-camera-485502-u2/global/targetHttpsProxies/manab-cloudrun-https-proxy",
            "name": "manab-cloudrun-https-proxy",
            "project": "thermal-camera-485502-u2",
            "proxy_bind": false,
            "proxy_id": 827784112478627296,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/targetHttpsProxies/manab-cloudrun-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/sslCertificates/manab-app-managed-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/urlMaps/manab-cloudrun-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_cloud_run_v2_service.python",
            "google_cloud_run_v2_service.react",
            "google_compute_backend_service.python_backend",
            "google_compute_backend_service.react_manab",
            "google_compute_managed_ssl_certificate.app_cert",
            "google_compute_region_network_endpoint_group.python_neg",
            "google_compute_region_network_endpoint_group.react_manab_neg",
            "google_compute_url_map.main",
            "google_sql_database.mydb",
            "google_sql_database_instance.main",
            "google_sql_user.db_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-07T12:51:32.924-08:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "j9JKOMI1Pqk=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/thermal-camera-485502-u2/global/urlMaps/manab-http-to-https-redirect",
            "map_id": 6727730667804766523,
            "name": "manab-http-to-https-redirect",
            "path_matcher": [],
            "project": "thermal-camera-485502-u2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/urlMaps/manab-http-to-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-08T08:51:32.208-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/backendServices/react-manab",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "JhybKqKAUKE=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "cloud.manabpokhrel.com.np"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/thermal-camera-485502-u2/global/urlMaps/manab-cloudrun-url-map",
            "map_id": 8173530291588048364,
            "name": "manab-cloudrun-url-map",
            "path_matcher": [
              {
                "default_custom_error_response_policy": [],
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/backendServices/react-manab",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "custom_error_response_policy": [],
                    "paths": [
                      "/cloud/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/backendServices/python-backend",
                    "url_redirect": []
                  },
                  {
                    "custom_error_response_policy": [],
                    "paths": [
                      "/check_login/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/backendServices/python-backend",
                    "url_redirect": []
                  },
                  {
                    "custom_error_response_policy": [],
                    "paths": [
                      "/login/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/backendServices/python-backend",
                    "url_redirect": []
                  },
                  {
                    "custom_error_response_policy": [],
                    "paths": [
                      "/logout/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/backendServices/python-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "thermal-camera-485502-u2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-camera-485502-u2/global/urlMaps/manab-cloudrun-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_cloud_run_v2_service.python",
            "google_cloud_run_v2_service.react",
            "google_compute_backend_service.python_backend",
            "google_compute_backend_service.react_manab",
            "google_compute_region_network_endpoint_group.python_neg",
            "google_compute_region_network_endpoint_group.react_manab_neg",
            "google_sql_database.mydb",
            "google_sql_database_instance.main",
            "google_sql_user.db_user"
          ]
        }
      ]
    }
  ]
}